Compiles against DSTU2 .jars. Basic POST and GET working.